<resources>
    <string name="app_name">taskAuto</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="enter_a_price">Enter a price</string>
    <string name="enter_a_year">Enter a year</string>
    <string name="select">Select</string>
    <string name="id">Id</string>
    <string name="add">Add</string>
    <string name="cars">Cars</string>
</resources>
