<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.taskauto.viewModel.AddFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/manufacturer"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:hint="@string/select"
            android:onClick="@{ ()->viewModel.txtManClick() }"
            android:padding="5dp"
            android:text="@{viewModel.manName}"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:elevation="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:padding="5dp"
            android:text="@string/model"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            app:elevation="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMan" />

        <TextView
            android:id="@+id/txtModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:drawableRight="@android:drawable/arrow_down_float"
            android:hint="@string/select"
            android:onClick="@{ ()->viewModel.txtModelClick() }"
            android:padding="5dp"
            android:text="@{ viewModel.modelName }"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:elevation="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:padding="5dp"
            android:text="@string/year"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            app:elevation="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtModel" />

        <EditText
            android:id="@+id/txtYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:hint="@string/enter_a_year"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="5dp"
            android:text="@={viewModel.year}"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:elevation="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:padding="5dp"
            android:text="@string/price"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            app:elevation="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtYear" />

        <EditText
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:hint="@string/enter_a_price"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="5dp"
            android:text="@={viewModel.price}"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:elevation="@dimen/cardview_compat_inset_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{ ()->viewModel.btnSaveClick() }"
            android:text="@string/save"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
